--- a/BankingProgram/BankingProgram.csproj
+++ b/BankingProgram/BankingProgram.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsultantUsers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkProcess.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
