--- a/BankingProgram/BankingProgram.csproj
+++ b/BankingProgram/BankingProgram.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Manager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Users.cs" />
     <Compile Include="WorkProcess.cs" />
   </ItemGroup>
   <ItemGroup>
